test/scc/expr/semantic-errors/122.a
122.t:3:21: error: too many initializer values